[package]
name = "aoc"
version = "0.1.0"
authors = ["matthewgrogan"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
single = "1.0.0"
regex = "1.4.2"
lazy_static = "1.4.0"
itertools = "0.7.8"
log = "0.4.11"
env_logger = "0.8.2"
bimap = "0.5.3"